--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -11,22 +11,22 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="48dp">
 
         <ImageView
             android:id="@+id/ic_profile"
             android:src="@drawable/ic_action_user"
             android:contentDescription="@string/profile"
             android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
 
         <Spinner
             android:id="@+id/profile_spinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="32dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="48dp"
             android:layout_toRightOf="@+id/ic_profile"
             android:layout_alignParentRight="true"
             android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>
@@ -38,14 +38,14 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="48dp">
 
         <ImageView
             android:id="@+id/ic_tag"
             android:src="@drawable/ic_action_tag"
             android:contentDescription="@string/tag"
             android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
 
@@ -58,7 +58,7 @@
             android:layout_toLeftOf="@+id/tag_settings"
             android:layout_toRightOf="@+id/ic_tag"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:completionThreshold="2"
             android:hint="@string/tag"/>
 
@@ -66,8 +66,10 @@
             android:id="@+id/tag_settings"
             android:src="@drawable/ic_action_gear"
             android:contentDescription="@string/tag_settings"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:enabled="false"
+            android:visibility="invisible"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             style="?android:borderlessButtonStyle"/>
@@ -77,7 +79,7 @@
     <RelativeLayout
         android:id="@+id/master_key_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -88,7 +90,7 @@
             android:src="@drawable/ic_action_key"
             android:contentDescription="@string/master_key"
             android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
 
@@ -102,13 +104,13 @@
             android:layout_toLeftOf="@+id/digest_text"
             android:layout_toRightOf="@+id/ic_key"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="@string/master_key"/>
 
         <TextView
             android:id="@+id/digest_text"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:gravity="center"
