Tutorial and activity to create the first profile

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -16,4 +16,9 @@
         android:title="@string/action_settings"
         android:orderInCategory="102"
         android:showAsAction="never"/>
+    <item
+        android:id="@+id/action_help"
+        android:title="@string/action_help"
+        android:orderInCategory="103"
+        android:showAsAction="never"/>
 </menu>
