--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
     <LinearLayout
         android:id="@+id/button_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/button_bar_height"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         style="?android:buttonBarStyle"
