--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -21,4 +21,9 @@
         android:title="@string/action_help"
         android:orderInCategory="103"
         android:showAsAction="never"/>
+    <item
+        android:id="@+id/action_about"
+        android:title="@string/action_about"
+        android:orderInCategory="104"
+        android:showAsAction="never"/>
 </menu>
