--- a/app/src/main/res/layout/activity_add_default_profile.xml
+++ b/app/src/main/res/layout/activity_add_default_profile.xml
@@ -17,6 +17,7 @@
             android:background="@drawable/tutorial_background"
             android:orientation="vertical"
             android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -46,7 +47,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_marginTop="@dimen/activity_vertical_margin_large"
+                android:layout_marginTop="@dimen/add_default_profile_vertical_margin"
                 android:gravity="left"
                 android:text="@string/tutorial_first_profile"
                 android:textSize="@dimen/tutorial_content_text_size"
@@ -60,6 +61,14 @@
                 android:hint="@string/private_key"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:scrollHorizontally="false"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_marginTop="@dimen/add_default_profile_vertical_margin"
+                android:gravity="left"
+                android:text="@string/tutorial_first_profile_master_key"
+                android:textSize="@dimen/tutorial_content_text_size"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
