--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="add_default_profile_logo_size">36dp</dimen>
     <dimen name="add_default_profile_logo_text_size">28sp</dimen>
     <dimen name="add_default_profile_vertical_margin">@dimen/activity_vertical_margin</dimen>
+    <dimen name="activity_top_margin">32dp</dimen>
 </resources>
