--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="add_default_profile_logo_size">48dp</dimen>
     <dimen name="add_default_profile_logo_text_size">30sp</dimen>
     <dimen name="add_default_profile_vertical_margin">@dimen/activity_vertical_margin_large</dimen>
+    <dimen name="activity_top_margin">96dp</dimen>
 </resources>
