--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,6 @@
     <color name="pager_progress_rest">#e5e5e5</color>
     <color name="hashmypass_main">#0f9d58</color>
     <color name="hashmypass_light">#15c770</color>
+    <color name="holo_light_background">#fff3f3f3</color>
+    <color name="card_action">@android:color/holo_blue_dark</color>
 </resources>
