--- a/app/src/main/res/layout/card_tag_list_inner_main.xml
+++ b/app/src/main/res/layout/card_tag_list_inner_main.xml
@@ -20,20 +20,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <TextView
             android:id="@+id/tag_favicon"
-            android:src="@drawable/ic_amazon"
-            android:layout_width="32dp"
+            android:textAllCaps="true"
+            android:layout_width="24dp"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="8dp"
-            android:layout_height="40dp"/>
+            android:layout_height="24dp"/>
 
         <TextView
             android:id="@+id/tag_name"
             android:layout_width="match_parent"
             android:fontFamily="sans-serif-light"
             android:text="@string/tag"
-            android:gravity="left"
+            android:gravity="left|center_vertical"
             android:textSize="@dimen/card_inner_text_size"
-            android:layout_height="wrap_content"/>
+            android:layout_height="40dp"/>
     </LinearLayout>
 </RelativeLayout>
