--- a/app/src/main/res/layout/card_master_key_inner_main.xml
+++ b/app/src/main/res/layout/card_master_key_inner_main.xml
@@ -2,8 +2,8 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingLeft="@dimen/small_spacing"
+              android:paddingRight="@dimen/small_spacing"
               android:layout_gravity="center_vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
