--- a/app/src/main/res/layout/card_tag_inner_header.xml
+++ b/app/src/main/res/layout/card_tag_inner_header.xml
@@ -11,20 +11,20 @@
         android:orientation="horizontal"
         style="@style/card"
         android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/card_header_simple_title_margin_left"
-        android:layout_marginRight="@dimen/card_header_simple_title_margin_right"
+        android:layout_marginLeft="@dimen/small_spacing"
+        android:layout_marginRight="@dimen/small_spacing"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/button_size">
 
         <TextView
             android:id="@+id/tag_favicon"
             android:textAllCaps="true"
-            android:layout_width="24dp"
+            android:layout_width="@dimen/favicon_size"
             android:textColor="@android:color/white"
             android:gravity="center"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="8dp"
-            android:layout_height="24dp"/>
+            android:layout_marginRight="16dp"
+            android:layout_height="@dimen/favicon_size"/>
 
         <TextView
             android:id="@+id/tag_name"
@@ -33,7 +33,7 @@
             android:gravity="left|center_vertical"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="40dp"/>
+            android:layout_height="@dimen/button_size"/>
 
         <AutoCompleteTextView
             android:id="@+id/tag_name_autocomplete"
@@ -43,7 +43,7 @@
             android:maxLength="25"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/button_size"
             android:gravity="left|center_vertical"
             android:imeOptions="actionNext"
             android:completionThreshold="1"
@@ -57,8 +57,8 @@
         android:id="@+id/card_header_divider"
         android:layout_alignBottom="@+id/header"
         android:layout_width="match_parent"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_height="1dp"
         android:background="@color/card_base_cardwithlist_divider_color"/>
 </RelativeLayout>
