--- a/app/src/main/res/layout/card_tag_inner_main.xml
+++ b/app/src/main/res/layout/card_tag_inner_main.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_gravity="center_vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="48dp">
 
     <TextView
         android:id="@+id/hash"
