--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,7 +48,8 @@
     <dimen name="viewpager_indicator_height">2dp</dimen>
     <dimen name="empty_list_text_size">22sp</dimen>
     <dimen name="empty_list_image_size">112dp</dimen>
-    <dimen name="button_bar_height">48dp</dimen>
-    <dimen name="card_inner_text_size">16sp</dimen>
-    <dimen name="card_hashed_password_text_size">18sp</dimen>
+    <dimen name="button_size">48dp</dimen>
+    <dimen name="card_inner_text_size">18sp</dimen>
+    <dimen name="card_hashed_password_text_size">20sp</dimen>
+    <dimen name="favicon_size">32dp</dimen>
 </resources>
