--- a/app/src/main/res/layout/card_master_key_inner_main.xml
+++ b/app/src/main/res/layout/card_master_key_inner_main.xml
@@ -3,7 +3,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:paddingLeft="@dimen/small_spacing"
-              android:paddingRight="@dimen/small_spacing"
               android:layout_gravity="center_vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
@@ -23,6 +22,7 @@
 
     <ImageView
         android:id="@+id/identicon"
+        android:contentDescription="@string/master_key"
         android:layout_width="48dp"
         android:padding="8dp"
         android:layout_height="48dp"
